[B]Version 1.7.45[/B]

- Updated: boysfood
- Fixed: catcher
- Reverted Frodo fix it broke some web sites
- prefix pornhub with zz


[B]Version 1.7.44[/B]

- Fix for Frodo


[B]Version 1.7.43[/B]

- Updated: Ah-Me
- Fixed: catcher


[B]Version 1.7.42[/B]

- re-enable Pornhub it is not broken
- Updated: shufuni
- Fixed: catcher
- Updated: yuvutu
- Fixed: video listing


[B]Version 1.7.41[/B]

- prefixed broken sites with zz for future removal.


[B]Version 1.7.40[/B]

- Updated: fapdu
- Fixed: video url
- Updated: xvideos
- Fixed: added brackets around url
- Updated: spankwire
- Fixed: video url


[B]Version 1.7.38[/B]

- Cleaned up the code
- Updated: pornomovies	
- Fixed: catcher
- Fixed: video url


[B]Version 1.7.37[/B]

- Cleaned up the code
- Updated: ah-me
- Fixed: catcher
- Fixed: video url


[B]Version 1.7.36[/B]

- Updated: hardsextube
- Fixed: catcher


[B]Version 1.7.35[/B]

- Updated: yuvutu
- Fixed: catcher
- Marked stileproject broken


[B]Version 1.7.34[/B]

- Updated: xvideos
- Fixed: video regex
- Fixed: catcher


[B]Version 1.7.33[/B]

- Updated: fucktube
- Fixed: Added direct links


[B]Version 1.7.32[/B]

- Updated: hardsextube
- Fixed: url parsing


[B]Version 1.7.31[/B]

- Updated: youporn
- Fixed: video regex
- Fixed: catcher


[B]Version 1.7.30[/B]

- Updated: eporner
- Fixed: video regex
- Updated: extremetube
- Fixed: video regex
- Updated: pornrabbit
- Fixed: categories
- Fixed: video regex
- Fixed: catcher


[B]Version 1.7.29[/B]

- Updated: youjizz
- Fixed: video regex


[B]Version 1.7.28[/B]

- prefixed broken sites with zz for future removal.


[B]Version 1.7.27[/B]

- Added: 4tube


[B]Version 1.7.26[/B]

- Cleanups for Eden


[B]Version 1.7.25[/B]

- Added: moviefap


[B]Version 1.7.24[/B]

- Updated: yuvutu
- Fixed: video regex
- Updated: fucktube
- Fixed: video regex
- Fixed: catcher
- Updated: pornhub
- Added: gay category


[B]Version 1.7.23[/B]

- Added: motherless


[B]Version 1.7.22[/B]

- Updated: eporner
- Fixed: catcher

