@@ -1,3 +1,8 @@
+[B]Version 1.7.50[/B]
+
+- Fix for Frodo v2
+
+
 [B]Version 1.7.45[/B]
 
 - Updated: boysfood
